@@ -16,7 +16,7 @@
     border-top-width: 0;
 }
 
-#memo_body {
+#mnemo-body {
     width: 100%;
 }
 
